--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^46.2.6",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.10",
     "prettier": "^2.4.1",
