--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "axios": "^1.4.0",
     "react": "18.2.0",
-    "react-native": "0.71.11"
+    "react-native": "0.71.11",
+    "react-query": "^3.39.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
