--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-query": "^3.39.3",
