feat: add content detail header

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.71.11",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal": "^13.0.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-query": "^3.39.3",
