--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.6.3",
