--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "i18next": "^23.2.7",
     "react": "18.2.0",
+    "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal": "^13.0.1",
