--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^13.9.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
