feat: add react native permisions and crop picker

--- a/ios/AllChiveMobile/Info.plist
+++ b/ios/AllChiveMobile/Info.plist
@@ -37,6 +37,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 접근을 원하시면 '확인'을 눌러 허용해 주세요.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>원활한 사진 접근을 원하시면 '모든 사진에 대한 접근 허용'을 눌러 허용해 주세요.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>fonts/Pretendard-Bold.ttf</string>
