--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal": "^13.0.1",
+    "react-native-permissions": "3.8.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
@@ -51,6 +53,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.10",
+    "pod-install": "^0.1.38",
     "prettier": "^2.4.1",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-test-renderer": "18.2.0",
@@ -58,5 +61,9 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "reactNativePermissionsIOS": [
+    "Camera",
+    "PhotoLibrary"
+  ]
 }
