--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@alessiocancian/react-native-actionsheet": "^3.2.0",
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.1",
-    "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
+    "react-native-config": "^1.5.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.7.3",
