--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,3 +168,5 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
