--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@alessiocancian/react-native-actionsheet": "^3.2.0",
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
