--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.2.7",
+    "link-preview-js": "^3.0.4",
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
