--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
     "react-native-config": "^1.5.1",
+    "react-native-document-picker": "^9.0.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
