--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
@@ -34,12 +35,14 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-permissions": "3.8.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.9.0",
+    "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
