--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "aws-sdk": "^2.1425.0",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "i18next": "^23.2.7",
     "link-preview-js": "^3.0.4",
     "react": "18.2.0",
@@ -30,6 +32,7 @@
     "react-native": "0.71.11",
     "react-native-config": "^1.5.1",
     "react-native-document-picker": "^9.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
@@ -43,6 +46,7 @@
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
