--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
