--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
