--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/is-url": "^1.2.30",
     "aws-sdk": "^2.1425.0",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "base64-arraybuffer": "^1.0.2",
     "i18next": "^23.2.7",
+    "is-url": "^1.2.4",
     "link-preview-js": "^3.0.4",
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
