chore: install package
- react-native-device-info

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
     "react-native-config": "^1.5.1",
+    "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.40.0",
