--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-viewing": "^0.2.2",
