--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/is-url": "^1.2.30",
+    "@types/lodash": "^4.14.197",
     "aws-sdk": "^2.1425.0",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
