--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build-android-prod": "react-native run-android --variant=prodrelease",
     "make-aab-prod-r": "cd android && ./gradlew bundleProdRelease && cd ..",
     "ios": "react-native run-ios",
+    "ios-dev": "react-native run-ios --scheme Dev --configuration Debug",
+    "ios-prod": "react-native run-ios --scheme Product --configuration Debug",
+    "build-ios-dev": "react-native run-ios --scheme Dev --configuration Release",
+    "build-ios-prod": "react-native run-ios --scheme Product --configuration Release",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
