--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-native": "0.71.11",
+    "react-native-blob-util": "^0.19.1",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
