--- a/ios/AllChiveMobile/Info.plist
+++ b/ios/AllChiveMobile/Info.plist
@@ -44,11 +44,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라로 촬영한 사진을 업로드하기 위해
-	카메라 권한이 필요합니다.</string>
+	<string>카메라 권한을 허용하시겠습니까?
+	이 권한은 사용자가 카메라로 찍은 사진을 업로드하기 위해 쓰일것입니다.
+	사용자는 업로드한 사진으로 프로필 사진을 바꾸거나, 이미지 컨텐츠를 아카이빙에 추가할 수 있습니다.
+	이 앱은 권한을 해당 목적 외에는 사용하지 않습니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>앨범에서 선택한 사진을 업로드하기 위해
-	사진 권한이 필요합니다.</string>
+	<string>앨범 접근 권한을 허용하시겠습니까?
+	이 권한은 사용자가 앨범에서 선택한 사진을 업로드하기 위해 쓰일것입니다.
+	사용자는 업로드한 사진으로 프로필 사진을 바꾸거나, 이미지 컨텐츠를 아카이빙에 추가할 수 있습니다.
+	이 앱은 권한을 해당 목적 외에는 사용하지 않습니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>fonts/Pretendard-Bold.ttf</string>
