--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@emotion/react": "^11.11.1",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/is-url": "^1.2.30",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.2.7",
@@ -61,7 +63,8 @@
     "react-native-svg": "^13.11.0",
     "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
