--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/is-url": "^1.2.30",
-    "add": "^2.0.6",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.2.7",
@@ -63,8 +62,7 @@
     "react-native-svg": "^13.11.0",
     "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
-    "recoil": "^0.7.7",
-    "yarn": "^1.22.19"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
