--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-image-viewing": "^0.2.2",
     "react-native-inappbrowser-reborn": "^3.7.0",
