--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.197",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.2",
     "@types/react-test-renderer": "^18.0.0",
@@ -84,6 +85,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
+    "lodash": "^4.17.21",
     "metro-react-native-babel-preset": "0.73.10",
     "pod-install": "^0.1.38",
     "prettier": "^2.4.1",
