--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/is-url": "^1.2.30",
+    "@types/react-native-extra-dimensions-android": "^1.2.0",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.2.7",
@@ -44,6 +45,7 @@
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
