--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,25 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <!--Add this filter, if you want support opening urls into your app-->
+            <data
+                android:scheme="https"
+                android:host="example.com"
+                android:pathPrefix="/invite"/>
+        </intent-filter>
+
+        <!-- text, image share-->
+        <intent-filter>
+            <action android:name="android.intent.action.SEND" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <data android:mimeType="text/*" />
+            <data android:mimeType="image/*" />
+        </intent-filter>
       </activity>
       <activity
         android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
