--- a/ios/AllChiveMobile/Info.plist
+++ b/ios/AllChiveMobile/Info.plist
@@ -28,6 +28,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>$(ALLCHIVE_NATIVE_APP_KEY_WITH_KAKAO)</string>
+				<string>AllChive</string>
 			</array>
 		</dict>
 	</array>
