--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-pager-view": "^6.2.0",
     "react-native-permissions": "3.8.0",
     "react-native-popup-menu": "^0.16.1",
+    "react-native-receive-sharing-intent": "^2.0.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-shadow-2": "^7.0.8",
